[package]
name = "server_automation"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.19"
crossterm = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
ssh2 = "0.9"
tokio = { version = "1.41.1", features = ["full"] }